--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,8 @@ buildscript {
 
 plugins {
     id 'java'
+    id "com.diffplug.eclipse.apt" version "3.26.0" // Only for Eclipse
+
 }
 
 group 'org.example'
@@ -25,10 +27,14 @@ dependencies {
     implementation('org.bg.schemas:library:1.0.2')
     // https://mvnrepository.com/artifact/com.googlecode.jmapper-framework/jmapper-core
     implementation group: 'com.googlecode.jmapper-framework', name: 'jmapper-core', version: '1.6.1.CR2'
+    implementation 'org.mapstruct:mapstruct:1.4.2.Final'
+
+    annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.2.Final'
+    testAnnotationProcessor 'org.mapstruct:mapstruct-processor:1.4.2.Final' // if you are using mapstruct in test code
 
     implementation "org.apache.avro:avro:1.10.1"
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+//    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
+//    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
 }
 
 test {
